# stochkit-dgap

./: AUTHORS  MMake  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
drivers/: Makefile.in  ParallelIntervalSimulation.cpp  SerialIntervalSimulationDriver.h  tau_leaping_exp_adapt_mixed_serial.cpp
model_parser/: Input.ipp  Input_events.ipp  Makefile.in
output/: IntervalOutput.h  Makefile.in  StatsOutput.h
solvers/: Makefile.in  SSA_Direct.ipp
src/: CustomPropensityFunctions.h  Makefile.am  Makefile.in  model.xml
utility/: CommandLineInterface.cpp  CommandLineInterface.h  Makefile.in
